--- a/Sources/Poly/typesystem.tex
+++ b/Sources/Poly/typesystem.tex
@@ -79,8 +79,8 @@ substitution lemma as shown in \cref{lemma:general_lemma} does not hold in
     \drule{top}
     \drule{rcd}
     \drule{arr}
-    \drule{andl}
-    \drule{andr}
+    \drule{andL}
+    \drule{andR}
     \drule{and}
     \drule{distArr}
     \drule{topArr}
