--- a/Sources/Related.tex
+++ b/Sources/Related.tex
@@ -46,7 +46,7 @@ subtyping.
 Central to the first approach is to find a normal form for a representation of
 the derivation and show that normal forms are unique for a given typing
 judgment. However, this approach cannot be directly applied to Curry-style
-calculi, i.e, where the lambda abstractions are not type annotated. Also this
+calculi, i.e., where the lambda abstractions are not type annotated. Also this
 line of reasoning cannot be used when the calculus has general recursion.
 \citet{biernacki2015logical} considered the coherence problem of coercion
 semantics. Their criterion for coherence of the translation is
