--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1351,3 +1351,11 @@ booktitle = {Archiv. Math. Logik}
   pages={348--375},
   year={1978}
 }
+
+@inproceedings{lambek1985cartesian,
+  title={Cartesian closed categories and typed $\lambda$-calculi},
+  author={Lambek, Joachim},
+  booktitle={LITP Spring School on Theoretical Computer Science},
+  pages={136--175},
+  year={1985}
+}
