--- a/Thesis.tex
+++ b/Thesis.tex
@@ -122,6 +122,9 @@
     {#4}
 }
 
+\usepackage{tikz-cd}
+\usetikzlibrary{babel}
+
 %%----------------------------------------------------------------------------%%
 %%    Environment for Declaration                                             %%
 %%----------------------------------------------------------------------------%%
@@ -248,7 +251,7 @@ diploma or other qualifications.
 
 
   \include{Sources/Related}
-  \include{Sources/Conclusion}
+  \input{Sources/Conclusion.mng}
 
 
   \appendix
