--- a/packages.tex
+++ b/packages.tex
@@ -30,6 +30,9 @@
 
 \usepackage{comment}
 
+\usepackage{longtable}
+
+
 % Code highlighting
 \usepackage{listings}
 
@@ -87,6 +90,7 @@
 \newtheorem{theorem}{Theorem}
 \newtheorem{lemma}{Lemma}
 \newtheorem{corollary}{Corollary}
+\newtheorem{proposition}{Proposition}
 \theoremstyle{definition}
 \newtheorem{definition}{Definition}
 \newtheorem{example}{Example}
