--- a/Sources/Poly/disjoint.tex
+++ b/Sources/Poly/disjoint.tex
@@ -49,11 +49,11 @@ sense, we have the following:
 \end{proof}
 
 An intuition of the following may help better understanding
-\cref{lemma:covariance:disjoint}. As we will see in \cref{sec:category}, another
-way to interpret two types being disjoint is that their least upper bound is
-(isomorphic to) $[[Top]]$. Following this interpretation, it is obvious that if
-the least upper bound of two given types is already $[[Top]]$, a supertype of
-one of them will not change this fact.
+\cref{lemma:covariance:disjoint}. Another way to interpret two types being
+disjoint is that their least upper bound is (isomorphic to) $[[Top]]$ (cf.
+\cref{sec:category}). Following this interpretation, it is obvious that if the
+least upper bound of two given types is already $[[Top]]$, a supertype of one of
+them will not change this fact.
 
 We now turn to \rref{FD-forall}. To illustrate this rule, consider the following two types:
 \begin{mathpar}
