--- a/Thesis.bib
+++ b/Thesis.bib
@@ -1359,3 +1359,43 @@ booktitle = {Archiv. Math. Logik}
   pages={136--175},
   year={1985}
 }
+
+@inproceedings{odersky1996putting,
+  title={Putting Type Annotations to Work},
+  author={Odersky, Martin and L{\"a}ufer, Konstantin},
+  booktitle={Symposium on Principles of Programming Languages (POPL)},
+  year={1996},
+}
+
+@article{jones2007practical,
+  title={Practical Type Inference for Arbitrary-Rank Types},
+  author={Peyton Jones, Simon and Vytiniotis, Dimitrios and Weirich, Stephanie and Shields, Mark},
+  journal={Journal of Functional Programming (JFP)},
+  volume={17},
+  number={1},
+  pages={1--82},
+  year={2007},
+}
+
+
+@inproceedings{dunfield2013complete,
+  title={Complete and Easy Bidirectional Typechecking for Higher-Rank Polymorphism},
+  author={Dunfield, Joshua and Krishnaswami, Neelakantan R},
+  booktitle={International Conference on Functional Programming (ICFP)},
+  year={2013},
+}
+
+@inproceedings{xie2018consistent,
+  title={Consistent Subtyping for All},
+  author={Xie, Ningning and Bi, Xuan and Oliveira, Bruno C. d. S.},
+  booktitle={European Symposium on Programming},
+  pages={3--30},
+  year={2018},
+}
+
+@inproceedings{siek2015refined,
+  title={Refined Criteria for Gradual Typing},
+  author={Siek, Jeremy G. and Vitousek, Michael M and Cimini, Matteo and Boyland, John Tang},
+  booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
+  year={2015},
+}
