--- a/Sources/Nested/typesystem.tex
+++ b/Sources/Nested/typesystem.tex
@@ -195,7 +195,7 @@ previous work~\citep{oliveira2016disjoint, alpuimdisjoint}.
 
 We elaborate well-typed source expression $[[ee]]$ into target terms $[[e]]$.
 Our target language \tname is the standard simply-typed call-by-value
-$\lambda$-calculus extended with products and coercions. The syntax of \tname is
+lambda calculus extended with products and coercions. The syntax of \tname is
 shown in \cref{fig:target}. The meta-function $| \cdot |$ shown in
 \cref{def:type:translate} transforms \namee types to \tname types. It is worth
 pointing out that we use the erasure semantics to model record labels, i.e.,
