--- a/Sources/Related.tex
+++ b/Sources/Related.tex
@@ -315,7 +315,7 @@ first-class traits.
 % delegation with a static type discipline. Cecil~\citep{chambers1992object,
 %   chambers1993cecil} is a prototype-based language, where delegation is the
 % mechanism for method call and code reuse. Cecil supports a polymorphic static
-% type system, although no meta-theory of any kind is given. Its type system is
+% type system, although no metatheory of any kind is given. Its type system is
 % able to detect statically when a message might be ambiguously defined as a
 % result of multiple inheritance or multiple dispatching. However, one major
 % omission of Cecil, which is also one of the interesting features of \namee, is
