--- a/Sources/Introduction.tex
+++ b/Sources/Introduction.tex
@@ -273,7 +273,7 @@ In summary the contributions of this theis are:
   intersection types based on logical relations.
 
 
-\item A comprehensive Coq mechanization of all meta-theory. This has notably
+\item A comprehensive Coq mechanization of all metatheory. This has notably
   revealed several missing lemmas and oversights in Pierce's manual
   proof of BCD's algorithmic subtyping~\citep{pierce1989decision}. As a
   by-product, we obtain the first mechanically verified BCD-style subtyping
@@ -316,7 +316,7 @@ structure of the technical content in the thesis is divided into three parts:
 \item[Part I:] \Cref{chap:nested,chap:fi} formally define the type systems of
   \namee and \fnamee, respectively. We first give the syntax and semantics of
   the two calculi. The semantics is defined in two parts. The ``target''
-  languages are two standard type systems (simply-typed $\lambda$-calculus and
+  languages are two standard type systems (simply-typed lambda calculus and
   System F, respectively) that do not have intersection types, the merge
   operator or subtyping. The ``source'' languages, defined by translation into
   the target languages, contain intersection types, the merge operator and
