--- a/Thesis.bib
+++ b/Thesis.bib
@@ -956,14 +956,14 @@ year		= {2007},
 @inproceedings{wand1987complete,
   title={Complete type inference for simple objects},
   author={Wand, Mitchell},
-  booktitle={LICS},
+  booktitle={Symposium on Logic in Computer Science (LICS)},
   year={1987}
 }
 
 @inproceedings{wand1989type,
   title={Type Inference for Record Concatenation and Multiple Inheritance},
   author={Wand, Mitchell},
-  booktitle={LICS},
+  booktitle={Symposium on Logic in Computer Science (LICS)},
   year={1989}
 }
 
@@ -1398,4 +1398,19 @@ booktitle = {Archiv. Math. Logik}
   author={Siek, Jeremy G. and Vitousek, Michael M and Cimini, Matteo and Boyland, John Tang},
   booktitle={LIPIcs-Leibniz International Proceedings in Informatics},
   year={2015},
+}
+
+
+@techreport{gaster1996polymorphic,
+  title={A polymorphic type system for extensible records and variants},
+  author={Gaster, Benedict R and Jones, Mark P},
+  institution={University of Nottingham},
+  year={1996}
+}
+
+@inproceedings{Harper:1991:RCB:99583.99603,
+ author = {Harper, Robert and Pierce, Benjamin},
+ title = {A Record Calculus Based on Symmetric Concatenation},
+ booktitle = {Principles of Programming Languages (POPL)},
+ year = {1991}
 }
